# py3status-github-notifications

./: .gitignore  PKGBUILD  README.md  pyproject.toml
src/py3status_github_notifications/: github_notifications.py
tests/: test_py3status_github_notifications.py
