[tool.poetry]
name = "py3status-github-notifications"
version = "0.1.15"
description = "py3status module to show your Github notifications"
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mcgillij/py3status-github-notifications"
repository = "https://github.com/mcgillij/py3status-github-notifications"
documentation = "https://github.com/mcgillij/py3status-github-notifications"
keywords = ["github", "notifications", "py3status", "i3", "git"]
packages = [
    { include = "py3status_github_notifications", from = "src" }
]

classifiers = [
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Version Control :: Git",
]

#[tool.poetry.plugins."py3status"]
#module = "py3status_github_notifications.github_notifications"
[tool.poetry.plugins."py3status"]
github_notifications = "py3status_github_notifications.github_notifications"

#[project]
#name = "py3status-github-notifications"

#[project.entry-points.py3status]
#module = "py3status_github_notifications.github_notifications"

[tool.poetry.dependencies]
python = "^3.11 || ^3.12 || ^3.13"
PyGithub = "^2.00"
py3status = "^3.45"
PyJWT = "^2.8.0"

[poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
